[package]
name = "password-locker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aead-io = "0.2.0"
chacha20poly1305 = "0.10.1"
inquire = "0.5.3"
lazy_static = "1.4.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
